syntax = "proto3";

package gateway;

enum RequestType {
  READ = 0;
  WRITE = 1;
  MCP = 2;
}

message QueryRequest {
  RequestType request_type = 1;
  string query = 2;
  map<string, string> parameters = 3;
}

message QueryResponse {
  bytes data = 1;
  int32 status = 2;
}

message HealthRequest {}

message HealthResponse {
  bool healthy = 1;
  string version = 2;
}

service BackendService {
  rpc Query(QueryRequest) returns (QueryResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}
